Changed success colors

--- a/app/styles/components/_flashMessage.scss
+++ b/app/styles/components/_flashMessage.scss
@@ -22,6 +22,6 @@ $flashMessageBorderRadius: 5px;
 }
 .flashMessage-success {
     color: #fff;
-    background: lightgreen;
-    border-color: #FFBB1A;
+    background: limegreen;
+    border-color: darkgreen;
 }
